--- a/script/meidi.conf
+++ b/script/meidi.conf
@@ -1,5 +1,12 @@
-[rewrite_local]
-^https:\/\/mcsp\.midea\.com\/api\/cms_bff\/mcsp-uc-mvip-bff\/member\/getProMemberInfo\.do url script-response-body https://gist.githubusercontent.com/Sliverkiss/d8543714edccb2743579989a74437e06/raw/mideaV2.js
+# @name 美的会员签到所需参数获取
+# @version v1.1.0
+# @description 用于 quantumultx 获取美的会员签到任务所需各项参数的重写文件
+# @author Sliverkiss
+# @homepage https://github.com/Sliverkiss/QuantumultX
+# @license MIT
 
-[MITM]
-hostname = mcsp.midea.com
+# mitm
+hostname = mvip.midea.cn
+
+# 获取美的会员签到需要的各项参数
+^https:\/\/mvip.midea.cn\/my\/muc\/get_growth_status url script-request-header https://gist.githubusercontent.com/Sliverkiss/3c0239a09cbe381c572a826a5caf5621/raw/midea.js
