--- a/scriptydypqj.conf
+++ b/scriptydypqj.conf
@@ -1,6 +1,6 @@
 [rewrite_remote]
 # 移动云盘去遮罩 (JQ 模式)
 ^https:\/\/m\.mcloud\.139\.com\/ycloud\/mcloudday\/gift\/list url jsonjq-response-body '.result.nationalPrizeList[]?.maskLayer = null | .result.provPrizeList[]?.maskLayer = null'
-
+^https?:\/\/caiyun\.feixin\.10086\.cn:7071\/ycloud\/mcloudday\/gift\/list url json jq-response-body '.result?.nationalPrizeList[]?.maskLayer = null | .result?.provPrizeList[]?.maskLayer = null'
 [MITM]
 hostname = m.mcloud.139.com
